--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = wofi --show drun
 
 
@@ -49,7 +49,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-
+exec = hyprpaper
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -215,7 +215,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, space, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
