--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -50,7 +50,7 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec = hyprpaper
-
+exec-once  = waybar
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
