--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -221,6 +221,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, firefox
+bind = $mainMod, Tab, exec, rofi -show drun
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
